--- a/2025.04.30/LearningLab/notebooks/Preprocessing-master/02.04.Split.ipynb
+++ b/2025.04.30/LearningLab/notebooks/Preprocessing-master/02.04.Split.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,11 +54,238 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "production_tb = load_production()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    type      length  thickness\n",
+      "0      E  206.844154  21.913649\n",
+      "3      A  179.090494  32.171630\n",
+      "4      C  357.135377  34.383311\n",
+      "7      D   81.613510   5.716271\n",
+      "8      D  210.661685  16.202948\n",
+      "..   ...         ...        ...\n",
+      "791    C  365.643976  70.381479\n",
+      "792    B  174.026172  17.230051\n",
+      "794    A  110.370041  11.521142\n",
+      "797    A   79.540734   6.829705\n",
+      "798    C  315.310144  23.896896\n",
+      "\n",
+      "[600 rows x 3 columns]\n",
+      "    type      length  thickness\n",
+      "1      A  147.422205  19.573435\n",
+      "2      E  120.196240   7.489863\n",
+      "5      D   92.315788  18.346373\n",
+      "6      D  129.719465   8.639130\n",
+      "12     D  169.495257  29.855163\n",
+      "..   ...         ...        ...\n",
+      "790    D  116.042893   3.944248\n",
+      "793    C  336.091059  20.255377\n",
+      "795    D  157.309219  31.439902\n",
+      "796    C  431.140370  74.984121\n",
+      "799    C  265.416958   7.799470\n",
+      "\n",
+      "[200 rows x 3 columns]\n",
+      "    type      length  thickness\n",
+      "0      E  206.844154  21.913649\n",
+      "1      A  147.422205  19.573435\n",
+      "2      E  120.196240   7.489863\n",
+      "3      A  179.090494  32.171630\n",
+      "4      C  357.135377  34.383311\n",
+      "..   ...         ...        ...\n",
+      "794    A  110.370041  11.521142\n",
+      "795    D  157.309219  31.439902\n",
+      "796    C  431.140370  74.984121\n",
+      "798    C  315.310144  23.896896\n",
+      "799    C  265.416958   7.799470\n",
+      "\n",
+      "[600 rows x 3 columns]\n",
+      "    type      length  thickness\n",
+      "8      D  210.661685  16.202948\n",
+      "9      B  188.563508  13.925531\n",
+      "10     D  213.516900   0.405075\n",
+      "11     D  188.769838  13.948710\n",
+      "15     B  108.038854  15.539570\n",
+      "..   ...         ...        ...\n",
+      "765    A  108.131898  15.986941\n",
+      "774    E  189.610666   1.419684\n",
+      "775    A  162.748730   7.556887\n",
+      "786    D  121.653303  15.744292\n",
+      "797    A   79.540734   6.829705\n",
+      "\n",
+      "[200 rows x 3 columns]\n",
+      "    type      length  thickness\n",
+      "0      E  206.844154  21.913649\n",
+      "1      A  147.422205  19.573435\n",
+      "2      E  120.196240   7.489863\n",
+      "3      A  179.090494  32.171630\n",
+      "4      C  357.135377  34.383311\n",
+      "..   ...         ...        ...\n",
+      "795    D  157.309219  31.439902\n",
+      "796    C  431.140370  74.984121\n",
+      "797    A   79.540734   6.829705\n",
+      "798    C  315.310144  23.896896\n",
+      "799    C  265.416958   7.799470\n",
+      "\n",
+      "[600 rows x 3 columns]\n",
+      "    type      length  thickness\n",
+      "7      D   81.613510   5.716271\n",
+      "16     D  118.991066  12.816692\n",
+      "21     C  185.747823  12.439603\n",
+      "26     B  107.941105  14.740840\n",
+      "31     C  320.065447  51.321714\n",
+      "..   ...         ...        ...\n",
+      "772    B  287.146342  14.569317\n",
+      "776    B  150.359757  10.995655\n",
+      "779    D  122.279661   1.683998\n",
+      "782    E  137.615823  15.399191\n",
+      "792    B  174.026172  17.230051\n",
+      "\n",
+      "[200 rows x 3 columns]\n",
+      "    type      length  thickness\n",
+      "1      A  147.422205  19.573435\n",
+      "2      E  120.196240   7.489863\n",
+      "5      D   92.315788  18.346373\n",
+      "6      D  129.719465   8.639130\n",
+      "7      D   81.613510   5.716271\n",
+      "..   ...         ...        ...\n",
+      "793    C  336.091059  20.255377\n",
+      "795    D  157.309219  31.439902\n",
+      "796    C  431.140370  74.984121\n",
+      "797    A   79.540734   6.829705\n",
+      "799    C  265.416958   7.799470\n",
+      "\n",
+      "[600 rows x 3 columns]\n",
+      "    type      length  thickness\n",
+      "0      E  206.844154  21.913649\n",
+      "3      A  179.090494  32.171630\n",
+      "4      C  357.135377  34.383311\n",
+      "13     B  227.271105  15.622443\n",
+      "14     C  173.263979  15.627559\n",
+      "..   ...         ...        ...\n",
+      "787    E  291.647766  49.785923\n",
+      "789    E  252.309115  35.160546\n",
+      "791    C  365.643976  70.381479\n",
+      "794    A  110.370041  11.521142\n",
+      "798    C  315.310144  23.896896\n",
+      "\n",
+      "[200 rows x 3 columns]\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import KFold\n",
+    "\n",
+    "train_data, test_data, train_target, test_target = train_test_split(production_tb.drop('fault_flg', axis=1),\n",
+    "                                                                    production_tb[['fault_flg']],\n",
+    "                                                                    test_size=0.2)\n",
+    "\n",
+    "train_data.reset_index(inplace=True, drop=True)\n",
+    "test_data.reset_index(inplace=True, drop=True)\n",
+    "train_target.reset_index(inplace=True, drop=True)\n",
+    "test_target.reset_index(inplace=True, drop=True)\n",
+    "\n",
+    "row_no_list = list(range(len(train_target)))\n",
+    "\n",
+    "k_fold = KFold(n_splits=4, shuffle=True)\n",
+    "\n",
+    "for train_cv_no, test_cv_no in k_fold.split(row_no_list):\n",
+    "    train_cv = train_data.iloc[train_cv_no, :]\n",
+    "    print(train_cv)\n",
+    "\n",
+    "    test_cv = train_data.iloc[test_cv_no, :]\n",
+    "    print(test_cv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "24\n",
+      "13\n",
+      "36\n",
+      "25\n",
+      "48\n",
+      "37\n",
+      "60\n",
+      "49\n",
+      "72\n",
+      "61\n",
+      "84\n",
+      "73\n",
+      "96\n",
+      "85\n",
+      "108\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "monthly_index_tb = load_monthly_index()\n",
+    "\n",
+    "train_window_start = 1\n",
+    "train_window_end = 24\n",
+    "horizon = 12\n",
+    "skip = 12\n",
+    "\n",
+    "monthly_index_tb.sort_values(by='year_month')\n",
+    "\n",
+    "while True:\n",
+    "    print(train_window_start)\n",
+    "    print(train_window_end)\n",
+    "    test_window_end = train_window_end + horizon\n",
+    "    train = monthly_index_tb[train_window_start:train_window_end]\n",
+    "    test = monthly_index_tb[(train_window_end + 1):test_window_end]\n",
+    "    if test_window_end >= len(monthly_index_tb.index):\n",
+    "        break\n",
+    "    train_window_start += skip\n",
+    "    train_window_end += skip"
    ]
   }
  ],
@@ -78,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
